--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "nuxt": "^2.15.8",
     "vazirmatn": "^32.102.0",
     "vue": "^2.6.14",
+    "vue-currency-input": "^3.0.0",
     "vue-persian-datetime-picker": "^2.10.4",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
